--- a/style.css
+++ b/style.css
@@ -52,17 +52,60 @@ nav a{
 
 .header{
     background-color: #fff8f3;
+    background-image: url(images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
 }
 
 .banner{
 
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
 }
 
 .pro-pic{
     width: 500px;
+
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.Banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    margin-bottom: 0;
+}
+
+.banner-descript{
+    margin-top: 20px;
+
+}
+.banner-content{
+    max-width: 500px;
+}
+.about{
+    padding: 130px;
+    margin: 130px 0;
+    background: #fff8f3;
+    border-radius: 10px;
+}
+.section-titile{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-descript{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 
 }
