--- a/style.css
+++ b/style.css
@@ -113,3 +113,11 @@ main{
     max-width: 1140px;
     margin: auto;
 }
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+
+}
