--- a/style.css
+++ b/style.css
@@ -187,7 +187,25 @@ footer{
     display: flex;
     background: #fff8f3;
     padding: 130px 200px ;
+    margin-top: 100px;
+    gap: 100px;
 }
+.footer-column{
+    width: 50%;
+}
+.contact input,textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+
+
+}
+
 
 
 
