--- a/style.css
+++ b/style.css
@@ -213,12 +213,31 @@ footer{
 }
 
 @media screen and (max-width:576px) {
-    .skills-container, .resume-container,footer, .about-info-container{
+    .skills-container, .resume-container,footer, .about-info-container,.banner,nav,nav>ul{
         flex-direction: column;
     }
     footer,.about{
         padding: 20px;
     }
+
+    .banner{
+        padding: 20px;
+    }
+    .pro-pic{
+        width: 100%;
+    }
+    nav>ul{
+        gap: 10px;
+    }
+
+    nav{
+        padding: 100px;
+    }
+    .nav-title{
+        text-align: center;
+    }
+
+    
 
     .footer-column{
         width: 100%;
